Fixed modal buttons spacing

--- a/web-app/src/sass/_Modals.scss
+++ b/web-app/src/sass/_Modals.scss
@@ -136,7 +136,7 @@
     .modal-btns {
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
 
         width: 100%;
